Scoreboard UI added - Chloe

--- a/src/coconuts/coconuts.fxml
+++ b/src/coconuts/coconuts.fxml
@@ -1,39 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" onKeyPressed="#onKeyPressed" vgap="10"
-          xmlns="http://javafx.com/javafx/24.0.2" fx:controller="coconuts.GameController">
+<GridPane alignment="center" hgap="10" maxHeight="650.0" minHeight="650.0" onKeyPressed="#onKeyPressed" prefHeight="650.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coconuts.GameController">
     <columnConstraints>
-        <ColumnConstraints/>
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints/>
+        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+        <RowConstraints maxHeight="650.0" minHeight="650.0" prefHeight="650.0" />
     </rowConstraints>
-    <children>
-        <VBox fx:id="skyAndSand" prefHeight="600.0" prefWidth="600.0">
-            <children>
-                <Pane id="theGame" fx:id="gamePane" prefHeight="550.0" prefWidth="600.0"
-                      style="-fx-background-color: linear-gradient(to bottom right, derive(skyblue, 20%), derive(skyblue, -40%));">
-                    <children>
-                        <Label layoutX="50.0" layoutY="550.0" scaleZ="2.0" text="Press arrow keys to move coconut"
-                               textFill="darkred" translateZ="1.0">
-                            <font>
-                                <Font name="Poor Richard" size="18.0"/>
-                            </font>
-                        </Label>
-                    </children>
-                </Pane>
-                <Pane id="theBeach" fx:id="theBeach" prefHeight="50.0" prefWidth="600.0"
-                      style="-fx-background-color: linear-gradient(to bottom right, derive(tan, 30%), derive(tan, -50%));">
-                </Pane>
-            </children>
-        </VBox>
-    </children>
+    <VBox fx:id="skyAndSand" maxHeight="650.0" minHeight="650.0" prefHeight="650.0" prefWidth="600.0" GridPane.rowIndex="1">
+        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: black;">
+            <Label text="Coconuts on Ground:" textFill="WHITE">
+                <font>
+                    <Font name="Poor Richard" size="18.0" />
+                </font>
+                <HBox.margin>
+                    <Insets right="10.0" />
+                </HBox.margin>
+            </Label>
+         <Label fx:id="cocoOnGroundLabel" text="0" textFill="WHITE">
+            <font>
+               <Font name="Poor Richard" size="18.0" />
+            </font>
+            <HBox.margin>
+               <Insets right="30.0" />
+            </HBox.margin>
+         </Label>
+            <Label text="Coconuts Destroyed:" textFill="WHITE">
+                <font>
+                    <Font name="Poor Richard" size="18.0" />
+                </font>
+                <HBox.margin>
+                    <Insets right="10.0" />
+                </HBox.margin>
+            </Label>
+         <Label fx:id="cocoDestroyedLabel" text="0" textFill="WHITE">
+            <HBox.margin>
+               <Insets right="60.0" />
+            </HBox.margin>
+            <font>
+               <Font name="Poor Richard" size="18.0" />
+            </font>
+         </Label>
+         <Label text="Press r to restart" textFill="WHITE">
+            <font>
+               <Font name="Poor Richard" size="18.0" />
+            </font>
+         </Label>
+        </HBox>
+        <Pane id="theGame" fx:id="gamePane" maxHeight="550.0" minHeight="550.0" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom right, derive(skyblue, 20%), derive(skyblue, -40%));" />
+        <Pane id="theBeach" fx:id="theBeach" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom right, derive(tan, 30%), derive(tan, -50%));">
+            <HBox prefHeight="50.0" prefWidth="600.0">
+                <VBox prefHeight="50.0" prefWidth="300.0">
+                    <Label text="Press arrow keys to move the crab" textFill="darkred">
+                        <font>
+                            <Font name="Poor Richard" size="18.0" />
+                        </font>
+                        <VBox.margin>
+                            <Insets left="30.0" />
+                        </VBox.margin>
+                    </Label>
+                    <Label text="Press up to fire lasers" textFill="darkred">
+                        <font>
+                            <Font name="Poor Richard" size="18.0" />
+                        </font>
+                        <VBox.margin>
+                            <Insets left="30.0" />
+                        </VBox.margin>
+                    </Label>
+                </VBox>
+                <VBox prefHeight="50.0" prefWidth="300.0">
+                    <Label prefHeight="21.0" prefWidth="300.0" text="Hold shift to sprint" textFill="darkred">
+                        <font>
+                            <Font name="Poor Richard" size="18.0" />
+                        </font>
+                        <VBox.margin>
+                            <Insets left="130.0" />
+                        </VBox.margin>
+                    </Label>
+                    <Label prefHeight="21.0" prefWidth="300.0" text="Press space to pause" textFill="darkred">
+                        <font>
+                            <Font name="Poor Richard" size="18.0" />
+                        </font>
+                        <VBox.margin>
+                            <Insets left="130.0" />
+                        </VBox.margin>
+                    </Label>
+                </VBox>
+            </HBox>
+        </Pane>
+    </VBox>
 </GridPane>
